
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Main.LoginRegister.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_register_name"
        android:id="@+id/txtNameRegister"
        android:textColor="@android:color/holo_red_dark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editNameRegister"
        android:hint="@string/edit_register"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_register_family"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/txtFamilyRegister"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edit_register"
        android:ems="10"
        android:id="@+id/editFamilyRegister" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_register_UserName"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/txtUserNameRegister" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edit_register"
        android:ems="10"
        android:id="@+id/editUserNameRegister" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_register_Password"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/txtPasswordRegister" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPasswordRegister" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_register_phone"
        android:id="@+id/txtPhoneRegister" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edit_register"
        android:ems="10"
        android:id="@+id/editPhoneRegister" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_register_mail"
        android:id="@+id/txtMailRegister" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edit_register"
        android:ems="10"
        android:id="@+id/editMailRegister" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_register_age"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/txtAgeRegister" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editAgeRegister" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_register_sex"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/txtSexRegister" />

    <Spinner
        android:id="@+id/spinnerSexRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/txt_register_sex"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register_save"
        android:id="@+id/btnSaveRegister"
        android:onClick="onSaveRegister"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register_cancel"
        android:id="@+id/btnCancelRegister"
        android:layout_gravity="center_horizontal"
        android:onClick="onCancelRegister"/>

</LinearLayout>
    </ScrollView>
