<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main.MainActivity">




    <item android:id="@+id/action_login"
        android:title="@string/action_menu_main_unregistered_login"
        android:orderInCategory="10"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_register"
        android:title="@string/action_menu_main_unregistered_registration"
        android:orderInCategory="10"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        />



</menu>